--- a/index.html
+++ b/index.html
@@ -974,8 +974,10 @@
                 </div>
                 <!-- Buttons -->
                 <div class="my-3">
-                  <button class="btn-shop-now m-3">Shop Now</button>
-                  <button class="btn-explore btn-shop-now m-3">Explore</button>
+                  <button class="btn-shop-now m-3" onclick="shop()">
+                    Shop Now
+                  </button>
+                  <button class="btn-explore btn-shop-now m-3"  onclick="about()">Explore</button>
                 </div>
               </div>
               <!-- Project Complete Numbers -->
@@ -1263,7 +1265,6 @@
       <section class="container text-center pt-5">
         <div class="section-title">
           <h2>Testinomials</h2>
-          <p></p>
         </div>
         <h2 class="col-md-7">
           We take pride in our work and our customer testimonials reflect that
