--- a/index.html
+++ b/index.html
@@ -977,7 +977,12 @@
                   <button class="btn-shop-now m-3" onclick="shop()">
                     Shop Now
                   </button>
-                  <button class="btn-explore btn-shop-now m-3"  onclick="about()">Explore</button>
+                  <button
+                    class="btn-explore btn-shop-now m-3"
+                    onclick="about()"
+                  >
+                    Explore
+                  </button>
                 </div>
               </div>
               <!-- Project Complete Numbers -->
@@ -1085,9 +1090,7 @@
           <h5 class="text-center">
             <span onclick="HomeProds('Sofas')">Living Room</span>
             &nbsp;|&nbsp;
-            <span onclick="HomeProds('WallArt&Clocks','HolidayDecor')"
-              >Home Decor</span
-            >
+            <span onclick="HomeProds('HolidayDecor')">Home Decor</span>
             &nbsp;|&nbsp;
             <span onclick="HomeProds('BedroomsSets')">Bedroom</span>
           </h5>
