--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@
             <div class="col-md-6">
               <div class="category-banner">
                 <img
-                  src="img/banners/accent-furniture.jpg"
+                  src="img/banners/AccentFurniture.jpeg"
                   alt="Accent Furniture"
                 />
                 <div class="category-banner-text">
@@ -1156,7 +1156,7 @@
 
             <div class="col-md-6">
               <div class="category-banner">
-                <img src="img/banners/home-decor.jpg" alt="Home Decor" />
+                <img src="img/banners/Decorative.jpg" alt="Home Decor" />
                 <div class="category-banner-text">
                   <h3>Home Decor</h3>
                   <p class="text-white mb-3">
@@ -1173,7 +1173,7 @@
 
             <div class="col-md-4">
               <div class="category-banner">
-                <img src="img/banners/living-room.jpeg" alt="Living Room" />
+                <img src="img/banners/LivingRoom.jpg" alt="Living Room" />
                 <div class="category-banner-text">
                   <h3>Living Room</h3>
                   <p class="text-white mb-3">
@@ -1188,7 +1188,7 @@
 
             <div class="col-md-4">
               <div class="category-banner">
-                <img src="img/banners/dinning-room.webp" alt="Dining Room" />
+                <img src="img/banners/DinnigRoom.jpg" alt="Dining Room" />
                 <div class="category-banner-text">
                   <h3>Dining Room</h3>
                   <p class="text-white mb-3">
@@ -1203,7 +1203,7 @@
 
             <div class="col-md-4">
               <div class="category-banner">
-                <img src="img/banners/home-office.jpg" alt="Home Office" />
+                <img src="img/banners/HomeOffice.jpg" alt="Home Office" />
                 <div class="category-banner-text">
                   <h3>Home Office</h3>
                   <p class="text-white mb-3">
