my first commit

--- a/productDetail.html
+++ b/productDetail.html
@@ -29,14 +29,8 @@
     <!----- Light Box CSS ----->
     <link rel="stylesheet" href="src/css/lightbox.min.css" />
 
-
-    
-
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="src/css/style.css" />
-
-
   </head>
 
   <body>
@@ -55,7 +49,7 @@
         <div class="container pt-2 pb-2">
           <!-- Logo -->
           <a class="navbar-brand" href="index.html"
-            ><img src="img/Logo/logo.svg" height="50" alt=""
+            ><img src="img/Logo/logo.png" height="70" alt=""
           /></a>
 
           <div class="justify-content-end d-flex">
@@ -96,7 +90,7 @@
             <div class="offcanvas-header border-bottom background-white">
               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
                 <a class="navbar-brand" href="index.html"
-                  ><img src="img/Logo/logo.svg" width="" height="70" alt=""
+                  ><img src="img/Logo/logo.png" width="" height="70" alt=""
                 /></a>
               </h5>
               <button
@@ -1040,7 +1034,6 @@
                 type="submit"
                 class="my-4 btn btn-view"
                 placeholder="submit"
-                
               />
             </form>
           </div>
@@ -1070,7 +1063,7 @@
         <div class="row">
           <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
             <img
-              src="img/Logo/logo-white.svg"
+              src="img/Logo/logo-white.png"
               height="55px"
               alt="Durable Furniture"
               srcset=""
@@ -1177,7 +1170,7 @@
 
   <!-- Sweet Alert Js -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
- 
+
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
   <script src="src/js/SingleProduct.js"></script>
