--- a/shop.html
+++ b/shop.html
@@ -43,7 +43,7 @@
         <div class="container pt-2 pb-2">
           <!-- Logo -->
           <a class="navbar-brand" href="index.html"
-            ><img src="img/Logo/logo.svg" height="50" alt=""
+            ><img src="img/Logo/logo.png" height="70" alt=""
           /></a>
 
           <div class="justify-content-end d-flex">
@@ -84,7 +84,7 @@
             <div class="offcanvas-header border-bottom background-white">
               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
                 <a class="navbar-brand" href="index.html"
-                  ><img src="img/Logo/logo.svg" width="" height="70" alt=""
+                  ><img src="img/Logo/logo.png" width="" height="70" alt=""
                 /></a>
               </h5>
               <button
@@ -1031,7 +1031,7 @@
         <div class="row">
           <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
             <img
-              src="img/Logo/logo-white.svg"
+              src="img/Logo/logo-white.png"
               height="55px"
               alt="Durable Furniture"
               srcset=""
