my first commit

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
-<!-- 
+    <!-- 
     <link
       rel="shortcut icon"
       href="img/Logo/logo-favicon.svg"
@@ -976,14 +976,14 @@
               <h2 class="ab-text-head">KNOW MORE ABOUT US</h2>
               <div class="break-small mb-2"></div>
               <p class="ab-text-para mb-4">
-                At Durable Furnitures, we pride ourselves on crafting pieces
-                that stand the test of time. Our skilled artisans use only the
-                finest materials to ensure each item is built to last. We
-                believe in combining functionality with timeless design to
-                elevate your living spaces. Our commitment to quality and
-                durability ensures that you receive exceptional value with every
-                purchase. Discover the perfect blend of style, comfort, and
-                longevity with Durable Furnitures.
+                At LuxeLivings, we pride ourselves on crafting pieces that stand
+                the test of time. Our skilled artisans use only the finest
+                materials to ensure each item is built to last. We believe in
+                combining functionality with timeless design to elevate your
+                living spaces. Our commitment to quality and durability ensures
+                that you receive exceptional value with every purchase. Discover
+                the perfect blend of style, comfort, and longevity with
+                LuxeLivings.
               </p>
               <div class="row">
                 <div class="col-12 col-md-4 mb-2 mb-md-0">
@@ -991,7 +991,7 @@
                     <i class="fa fa-wrench mb-3"></i>
                     <h4 class="mb-0">Project Complete</h4>
                     <p>
-                      <span class="digit-box mb-0" data-value="400">400</span>+
+                      <span class="digit-box mb-0" data-value="400">520</span>+
                     </p>
                   </div>
                 </div>
@@ -1001,7 +1001,7 @@
                     <i class="fa fa-users mb-3"></i>
                     <h4 class="mb-0">Satisfied Clients</h4>
                     <p>
-                      <span class="digit-box mb-0" data-value="600">600</span>+
+                      <span class="digit-box mb-0" data-value="600">477</span>+
                     </p>
                   </div>
                 </div>
@@ -1011,7 +1011,7 @@
                     <i class="fa fa-paper-plane mb-3"></i>
                     <h4 class="mb-0">Unique Styles</h4>
                     <p>
-                      <span class="digit-box mb-0" data-value="100">100</span>+
+                      <span class="digit-box mb-0" data-value="100">199</span>+
                     </p>
                   </div>
                 </div>
@@ -1178,7 +1178,7 @@
             <h4>CUSTOMER SUPPORT</h4>
             <p>
               If it’s furniture, we are here to serve you in the best manner
-              possible. Contact DurableFurnitures anytime: 0300 000 0000
+              possible. Contact LuxeLivings anytime: 0300 000 0000
             </p>
           </div>
           <div class="col-lg-4 col-md-3 mb-5">
@@ -1187,16 +1187,15 @@
             <p>
               We deliver what we display. And we display what we can deliver.
               “No mis- commitments” is something that everyone understands at
-              DurableFurnitures!
+              LuxeLivings!
             </p>
           </div>
           <div class="col-lg-4 col-md-3">
             <i class="fa-6x fa-solid fa-arrows-rotate pb-5"></i>
             <h4>WIDE RANGE</h4>
             <p>
-              We strive to provide something for everyone on DurableFurnitures
-              with regular uploads of new furniture products. Visit us
-              regularly!
+              We strive to provide something for everyone on LuxeLivings with
+              regular uploads of new furniture products. Visit us regularly!
             </p>
           </div>
         </div>
@@ -1411,7 +1410,7 @@
       </div>
       <hr class="container" />
       <div class="container-fluid copyright-section pb-3">
-        <p>Copyright © Durable Furnitures. All Rights Reserved</p>
+        <p>Copyright © LuxeLivings. All Rights Reserved</p>
       </div>
     </footer>
 
