--- a/brands.html
+++ b/brands.html
@@ -1056,7 +1056,7 @@
       </div>
       <hr class="container" />
       <div class="container-fluid copyright-section pb-3">
-        <p>Copyright © Durable Furnitures. All Rights Reserved</p>
+        <p>Copyright © LuxeLivings. All Rights Reserved</p>
       </div>
     </footer>
 
