--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="container pt-2 pb-2">
           <!-- Logo -->
           <a class="navbar-brand" href="index.html"
-            ><img src="img/Logo/logo.png" height="70"  alt=""
+            ><img src="img/Logo/logo.png" height="70" alt=""
           /></a>
 
           <div class="justify-content-end d-flex">
@@ -963,7 +963,7 @@
               <div>
                 <!-- Heading With Description -->
                 <div class="pb-3">
-                  <h2>DURABLE FURNITURES</h2>
+                  <h2>LuxeLivings</h2>
                   <p>
                     Step into a world where the art of Interior Design is
                     meticulously crafted to bring together timeless elegance and
@@ -1123,10 +1123,9 @@
         <div class="section-title">
           <h2>Explore Our Categories</h2>
           <p>
-            Discover the best in home furnishings at Durable Furnitures. From
-            chic accent pieces to complete home office setups, we have
-            everything you need to create a beautiful and functional living
-            space.
+            Discover the best in home furnishings at LuxeLivings. From chic
+            accent pieces to complete home office setups, we have everything you
+            need to create a beautiful and functional living space.
           </p>
         </div>
 
@@ -1508,7 +1507,7 @@
             <h4>CUSTOMER SUPPORT</h4>
             <p>
               If it’s furniture, we are here to serve you in the best manner
-              possible. Contact DurableFurnitures anytime: 0300 000 0000
+              possible. Contact LuxeLivings anytime: 0300 000 0000
             </p>
           </div>
           <div class="col-lg-4 col-md-3 mb-5">
@@ -1517,16 +1516,15 @@
             <p>
               We deliver what we display. And we display what we can deliver.
               “No mis- commitments” is something that everyone understands at
-              DurableFurnitures!
+              LuxeLivings!
             </p>
           </div>
           <div class="col-lg-4 col-md-3">
             <i class="fa-6x fa-solid fa-arrows-rotate pb-5"></i>
             <h4>WIDE RANGE</h4>
             <p>
-              We strive to provide something for everyone on DurableFurnitures
-              with regular uploads of new furniture products. Visit us
-              regularly!
+              We strive to provide something for everyone on LuxeLivings with
+              regular uploads of new furniture products. Visit us regularly!
             </p>
           </div>
         </div>
@@ -1741,7 +1739,7 @@
       </div>
       <hr class="container" />
       <div class="container-fluid copyright-section pb-3">
-        <p>Copyright © Durable Furnitures. All Rights Reserved</p>
+        <p>Copyright © LuxeLivings. All Rights Reserved</p>
       </div>
     </footer>
 
