--- a/productDetail.html
+++ b/productDetail.html
@@ -1146,7 +1146,7 @@
       </div>
       <hr class="container" />
       <div class="container-fluid copyright-section pb-3">
-        <p>Copyright © Durable Furnitures. All Rights Reserved</p>
+        <p>Copyright © LuxeLivings. All Rights Reserved</p>
       </div>
     </footer>
 
