--- a/about.html
+++ b/about.html
@@ -596,8 +596,8 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="brands.html?brand=IndexFurniture"
-                              >Index Furniture
+                              href="brands.html?brand=luxelivinginteriors"
+                              >Luxe Living Interiors
                             </a>
                           </li>
                           <li>
@@ -1249,8 +1249,8 @@
               /></a>
             </div>
             <div class="swiper-slide">
-              <a href="brands.html?brand=IndexFurniture">
-                <img src="img/Logo/brand/Indexfurniture.png" alt="" />
+              <a href="brands.html?brand=luxelivinginteriors">
+                <img src="img/Logo/brand/luxelivinginteriors.png" alt="" />
               </a>
             </div>
             <div class="swiper-slide">
