--- a/contact.html
+++ b/contact.html
@@ -584,8 +584,8 @@
                           <li>
                             <a
                               class="dropdown-item"
-                              href="brands.html?brand=IndexFurniture"
-                              >Index Furniture
+                              href="brands.html?brand=luxelivinginteriors"
+                              >Luxe Living Interiors
                             </a>
                           </li>
                           <li>
