my first  commit

--- a/productDetail.html
+++ b/productDetail.html
@@ -929,8 +929,9 @@
                 </div>
                 <!-- Add To Cart Icon -->
                 <div class="icon-wrapper mx-2">
-                  <a href="#" class="icon-link">
-                    <i class="text-color fas fa-shopping-cart"></i>
+                  <a href="cart.html" class="icon-link">
+                    <i class="text-color fas fa-shopping-cart fs-1"></i>
+                    <span class="badge text-bg-primary fs-1" id="cart-badge">0</span>
                   </a>
                 </div>
               </div>
@@ -1158,6 +1159,9 @@
 
   <!-- Product Data JS -->
   <script src="src/js/Product.js"></script>
+
+  <!-- Cart JS -->
+  <script src="src/js/cart.js"></script>
 
   <!----- Bootstrap JS ----->
   <script src="src/bootstrap/js/bootstrap.bundle.js"></script>
