--- a/compare.html
+++ b/compare.html
@@ -904,7 +904,7 @@
                     </li>
 
                     <li class="nav-item mx-2">
-                      <a class="nav-link active" href="compare.html">Compare</a>
+                      <a class="nav-link" href="compare.html">Compare</a>
                     </li>
 
                     <li class="nav-item mx-2">
