--- a/contact.html
+++ b/contact.html
@@ -905,7 +905,7 @@
                     </li>
 
                     <li class="nav-item mx-2">
-                      <a class="nav-link active" href="contact.html"
+                      <a class="nav-link" href="contact.html"
                         >Contact Us</a
                       >
                     </li>
