--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                   >
                     <li class="nav-item mx-2">
                       <a
-                        class="nav-link active"
+                        class="nav-link"
                         aria-current="page"
                         href="index.html"
                         >Home</a
