--- a/shop.html
+++ b/shop.html
@@ -133,7 +133,7 @@
                     </li>
 
                     <li class="nav-item mx-2">
-                      <a class="nav-link active" href="shop.html">Shop</a>
+                      <a class="nav-link " href="shop.html">Shop</a>
                     </li>
 
                     <li class="nav-item dropdown mx-2">
