--- a/cart.html
+++ b/cart.html
@@ -952,16 +952,17 @@
 
     <!------------ End Header ------------>
 
-
     <div class="container-fluid">
-      <div class="row px-5" id="top-mar">
+      <div class="row px-5">
         <div class="col-md-12 py-4" style="background-color: #f1f2f2">
-          <span class="h3 text-uppercase cat-title" id="about">My Cart</span>
+          <h2 class="text-uppercase">Cart</h2>
         </div>
       </div>
       <div class="row mx-4 pt-5">
         <div class="col-lg-8 table-responsive mb-5">
-          <table class="table bg-light table-bordered text-center mb-0  Main-cart">
+          <table
+            class="table bg-light table-bordered text-center mb-0 Main-cart"
+          >
             <thead class="text-dark">
               <tr>
                 <th>S No</th>
@@ -972,39 +973,37 @@
                 <th>Remove</th>
               </tr>
             </thead>
-            <tbody class="align-middle" id="prodTable">
-            </tbody>
+            <tbody class="align-middle" id="prodTable"></tbody>
           </table>
         </div>
         <div class="col-lg-4">
           <div class="card border-secondary mb-5">
-            <div class="card-header border-0" style="background-color: #f1f2f2">
-              <h4 class="font-weight-semi-bold m-0" id="my-purple">
-                Cart Summary
-              </h4>
+            <div class="card-header border-0 summary-head">
+              <h3 class="m-0 summary-head">Cart Summary</h3>
             </div>
             <div class="card-body">
-              <div class="d-flex justify-content-between pt-1">
-                <h6 class="font-weight-medium">
-                  Subtotal <small id="total_item">(1 Items)</small>
-                </h6>
-                <h6 class="font-weight-medium">
-                  Rs. <span id="sub_total">400</span>
-                </h6>
+              <div class="">
+                <div class="d-flex justify-content-between pt-1">
+                  <h6 class="font-p">
+                    Subtotal <small id="">(1 Items)</small>
+                  </h6>
+                  <h6 class="font-p">Pkr <span id="">400</span></h6>
+                </div>
               </div>
-              <!-- <div class="d-flex justify-content-between">
-                                <h6 class="font-weight-medium">Shipping</h6>
-                                <h6 class="font-weight-medium">$10</h6>
-                            </div> -->
+              <div class="d-flex justify-content-between">
+                <h6 class="font-p">Shipping</h6>
+                <h6 class="font-p">$10</h6>
+              </div>
             </div>
             <div class="card-footer border-secondary bg-transparent">
-              <!-- <div class="d-flex justify-content-between mt-2">
-                                <h5 class="font-weight-bold">Total</h5>
-                                <h5 class="font-weight-bold">$160</h5>
-                            </div> -->
-              <a href="checkout"
+              <div class="d-flex justify-content-between mt-2">
+                <h4>Total</h4>
+                <h4 class="">$160</h4>
+              </div>
+              <a href="#"
                 ><button
-                  class="btn btn-block btn-primary my-3 py-2 text-white btn-hover"
+                  class="btn btn-block btn-dark my-3 py-2 text-white btn-hover"
+                  style="font-size: 16px !important"
                 >
                   Proceed To Checkout
                 </button></a
@@ -1014,6 +1013,102 @@
         </div>
       </div>
     </div>
+
+    <!------------ Start Footer  ------------>
+
+    <footer class="ft mt-3 mt-md-0">
+      <div class="container px-5 px-lg-0 pt-5">
+        <div class="row">
+          <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
+            <img
+              src="img/Logo/logo-white.png"
+              height="55px"
+              alt="Durable Furniture"
+              srcset=""
+            />
+            <p class="mb-4 ps-0 company_details">
+              Experience unmatched quality and lasting durability with our
+              expertly crafted furniture...
+            </p>
+            <div class="contact-info">
+              <ul class="list-unstyled">
+                <li>
+                  <a href="#"
+                    ><i class="fa fa-home me-3"></i> No. 96, South City,
+                    London</a
+                  >
+                </li>
+                <li>
+                  <a href="#"><i class="fa fa-phone me-3"></i>+1 222 3333</a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><i class="fa fa-envelope me-3"></i>info@example.com</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
+            <h5>Customer Support</h5>
+            <ul class="link-widget p-0">
+              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="#">Product Returns</a></li>
+              <li><a href="#">Wholesale Policy</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
+            <h5>Quick Links</h5>
+            <ul class="link-widget p-0">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="about.html">About Us</a></li>
+              <li><a href="shop.html">Products</a></li>
+              <li><a href="compare.html">Compare Products</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-3 col-sm-6 mb-5 mb-lg-0">
+            <h5>Newsletter</h5>
+            <form action="" method="" class="ft-news">
+              <i class="far fa-envelope"></i>
+              <input type="email" placeholder="Enter your email id" required />
+              <button type="submit"><i class="fas fa-arrow-right"></i></button>
+            </form>
+            <h5>Stay Connected</h5>
+            <ul class="social-network d-flex align-items-center p-0">
+              <li>
+                <a href="https://www.facebook.com" target="_blank"
+                  ><i class="fab fa-facebook-f"></i
+                ></a>
+              </li>
+              <li>
+                <a href="https://twitter.com" target="_blank"
+                  ><i class="fab fa-twitter"></i
+                ></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com" target="_blank"
+                  ><i class="fab fa-linkedin-in"></i
+                ></a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com" target="_blank"
+                  ><i class="fab fa-youtube"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <hr class="container" />
+      <div class="container-fluid copyright-section pb-3">
+        <p>Copyright © LuxeLivings. All Rights Reserved</p>
+      </div>
+    </footer>
+
+    <!------------ End Footer  ------------>
   </body>
 
   <!-- Product Data JS -->
