my first  commit

--- a/login.html
+++ b/login.html
@@ -932,7 +932,7 @@
 
     <!------------ End Header ------------>
 
-    <!------------- End Form  ------------>
+    <!------------- Start Form  ------------>
 
     <section class="container-fluid">
       <div class="container">
@@ -948,7 +948,7 @@
             />
           </div>
           <div
-            class="col-md-6 p-md-5 justify-content-center d-flex align-items-center acc-form-main-cont pt-5 pt-md-0"
+            class="col-md-6 p-md-5 justify-content-center align-items-center acc-form-main-cont pt-5 pt-md-0"
           >
             <div class="align-items-center">
               <h1>luxeliving</h1>
