--- a/signup.html
+++ b/signup.html
@@ -939,38 +939,26 @@
           class="row justify-content-around account-cont align-items-stretch"
         >
           <div
-            class="col-md-6 p-md-5 justify-content-center d-flex align-items-center acc-form-main-cont pt-5 pt-md-0"
+            class="col-md-6 p-md-5 justify-content-center align-items-center acc-form-main-cont pt-5 pt-md-0"
           >
             <div class="align-items-center">
               <h1>luxeliving</h1>
               <form action="#" class="acc-form">
                 <div class="input-group d-flex flex-column">
                   <label for="name">Name</label>
-                  <input
-                    type="text"
-                    id="name"
-                  />
+                  <input type="text" id="name" />
                 </div>
                 <div class="input-group d-flex flex-column">
                   <label for="email">Email</label>
-                  <input
-                    type="email"
-                    id="email"
-                  />
+                  <input type="email" id="email" />
                 </div>
                 <div class="input-group d-flex flex-column">
                   <label for="password">Password</label>
-                  <input
-                    type="password"
-                    id="password"
-                  />
+                  <input type="password" id="password" />
                 </div>
                 <div class="input-group d-flex flex-column">
                   <label for="password">Confirm Password</label>
-                  <input
-                    type="password"
-                    id="password"
-                  />
+                  <input type="password" id="password" />
                 </div>
                 <div class="justify-content-center d-flex">
                   <input type="submit" value="Sign Up" class="btn" />
@@ -1004,7 +992,7 @@
               src="img/banners/account-pg.jpg"
               class="img-fluid"
               alt=""
-              style="height: 100% ; width: 100%"
+              style="height: 100%; width: 100%"
             />
           </div>
         </div>
