--- a/index.html
+++ b/index.html
@@ -30,6 +30,55 @@
     <link rel="stylesheet" href="src/css/lightbox.css" />
 
     <!----- Custom CSS ----->
+    <style>
+      /* Ensure the search bar input takes up full width */
+      .InputContainer {
+        position: relative;
+        width: 100%;
+      }
+
+      .input {
+        width: 100%;
+        padding: 10px;
+        font-size: 16px;
+        box-sizing: border-box;
+      }
+
+      .labelforsearch {
+        position: absolute;
+        top: 50%;
+        right: 10px;
+        transform: translateY(-50%);
+      }
+
+      /* Style the datalist dropdown */
+      #productList {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        max-height: 300px;
+        overflow-y: auto;
+        background-color: #333;
+        color: white;
+        border-radius: 5px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        z-index: 1000;
+        box-sizing: border-box;
+      }
+
+      #productList option {
+        padding: 10px;
+        cursor: pointer;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+
+      #productList option:hover {
+        background-color: #444;
+      }
+    </style>
     <link rel="stylesheet" href="src/css/style.css" />
   </head>
   <body>
@@ -114,22 +163,24 @@
                       class="input w-100"
                       id="input"
                       placeholder="Search Product"
+                      list="productList"
+                      autocomplete="off"
                     />
-
                     <label for="input" class="labelforsearch">
                       <i class="searchIcon fa-solid fa-magnifying-glass"></i>
                     </label>
+                    <datalist id="productList">
+                      <!-- Options will be populated by JavaScript -->
+                    </datalist>
                   </form>
+                  
                 </div>
                 <div class="row pt-lg-3">
                   <ul
                     class="navbar-nav justify-content-center align-items-start align-items-lg-center fs-5 flex-grow-1 px-3"
                   >
                     <li class="nav-item mx-2">
-                      <a
-                        class="nav-link"
-                        aria-current="page"
-                        href="index.html"
+                      <a class="nav-link" aria-current="page" href="index.html"
                         >Home</a
                       >
                     </li>
