--- a/signup.html
+++ b/signup.html
@@ -904,14 +904,14 @@
               </div>
               <div class="d-lg-flex d-none d-sm-none align-items-center px-4">
                 <!-- Wishlist Icon -->
-                <div class="icon-wrapper mx-2">
-                  <a href="#" class="icon-link">
+                <div class="mx-2">
+                  <a href="#" class="">
                     <i class="text-color fas fa-heart"></i>
                   </a>
                 </div>
                 <!-- Add To Cart Icon -->
-                <div class="icon-wrapper mx-2">
-                  <a href="#" class="icon-link">
+                <div class="mx-2">
+                  <a href="#" class="">
                     <i class="text-color fas fa-shopping-cart"></i>
                   </a>
                 </div>
@@ -939,7 +939,7 @@
           class="row justify-content-around account-cont align-items-stretch"
         >
           <div
-            class="col-md-6 p-md-5 justify-content-center align-items-center acc-form-main-cont pt-5 pt-md-0"
+            class="col-md-6 p-md-5 justify-content-center align-items-center acc-form-main-cont pt-5 pt-md-0 order-2 order-md-1"
           >
             <div class="align-items-center">
               <h1>luxeliving</h1>
