--- a/cart.html
+++ b/cart.html
@@ -938,12 +938,8 @@
                 </div>
               </div>
               <!-- Signup Button -->
-              <button
-                class="btn-signup d-none d-lg-flex align-items-center justify-content-center"
-              >
-                Sign Up
-              </button>
-              <button class="btn-signup mt-auto d-lg-none">Sign Up</button>
+              <button id="logtext" class="btn-signup d-none d-lg-flex align-items-center justify-content-center">Sign Up</button>
+              <button class="btn-signup mt-auto d-lg-none" id="logtext2">Sign Up</button>
             </div>
           </div>
         </div>
@@ -985,29 +981,28 @@
               <div class="">
                 <div class="d-flex justify-content-between pt-1">
                   <h6 class="font-p">
-                    Subtotal <small id="">(1 Items)</small>
+                    Subtotal <small id="itemsCount"></small>
                   </h6>
-                  <h6 class="font-p">Pkr <span id="">400</span></h6>
+                  <h6 class="font-p">Pkr <span id="showTotal"></span></h6>
                 </div>
               </div>
               <div class="d-flex justify-content-between">
                 <h6 class="font-p">Shipping</h6>
-                <h6 class="font-p">$10</h6>
+                <h6 class="font-p">Free</h6>
               </div>
             </div>
             <div class="card-footer border-secondary bg-transparent">
               <div class="d-flex justify-content-between mt-2">
                 <h4>Total</h4>
-                <h4 class="">$160</h4>
+                <h4 class="" id="showTotal2"></h4>
               </div>
-              <a href="#"
-                ><button
-                  class="btn btn-block btn-dark my-3 py-2 text-white btn-hover"
-                  style="font-size: 16px !important"
-                >
-                  Proceed To Checkout
-                </button></a
+              <button
+                id="btnCheckout"
+                class="btn btn-block btn-dark my-3 py-2 text-white btn-hover"
+                style="font-size: 16px !important"
               >
+                Proceed To Checkout
+              </button>
             </div>
           </div>
         </div>
@@ -1117,9 +1112,16 @@
   <!-- Cart JS -->
   <script src="src/js/cart.js"></script>
 
+  <!-- JQuery -->
+  <script src="src/js/JQuery-3.7.1.js"></script>
+
+  <!----- Custom JS ----->
+  <script src="src/js/Script.js"></script>
+
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       displayCart();
+      totalAmout();
     });
   </script>
 </html>
