--- a/login.html
+++ b/login.html
@@ -980,7 +980,7 @@
               </form>
               <p class="text-center">
                 Don't have an account?
-                <a href="#" style="color: #0c5a49">Sign Up</a>
+                <a href="signup.html" style="color: #0c5a49">Sign Up</a>
               </p>
               <div class="text-center">
                 <p class="" style="color: #777">OR</p>
