my first  commit

--- a/category.html
+++ b/category.html
@@ -59,9 +59,9 @@
 
     <!------------ End Products ------------>
 
-   <!------------ Start Footer  ------------>
-   <footer id="luxefooter"></footer>
-   <!------------ End Footer  ------------>
+    <!------------ Start Footer  ------------>
+    <footer id="luxefooter"></footer>
+    <!------------ End Footer  ------------>
   </body>
 
   <!-- LightBox JS -->
@@ -79,4 +79,5 @@
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
   <script src="src/js/Category.js"></script>
+  <script src="src/js/cart.js"></script>
 </html>
