--- a/compare.html
+++ b/compare.html
@@ -100,9 +100,9 @@
 
     <!------------ End Compare Section ------------>
 
-   <!------------ Start Footer  ------------>
-   <footer id="luxefooter"></footer>
-   <!------------ End Footer  ------------>
+    <!------------ Start Footer  ------------>
+    <footer id="luxefooter"></footer>
+    <!------------ End Footer  ------------>
   </body>
 
   <!-- LightBox JS -->
@@ -120,4 +120,5 @@
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
   <script src="src/js/Compare.js"></script>
+  <script src="src/js/cart.js"></script>
 </html>
