--- a/login.html
+++ b/login.html
@@ -22,12 +22,11 @@
 
     <!----- Custom CSS ----->
     <link rel="stylesheet" href="src/css/style.css" />
-   
   </head>
   <body>
-     <!------------ Start Header ------------>
-     <header id="luxeHeader"></header>
-     <!------------ End Header ------------>
+    <!------------ Start Header ------------>
+    <header id="luxeHeader"></header>
+    <!------------ End Header ------------>
 
     <!------------- Start Form  ------------>
 
@@ -104,9 +103,9 @@
 
     <!------------- End Form  ------------>
 
-   <!------------ Start Footer  ------------>
-   <footer id="luxefooter"></footer>
-   <!------------ End Footer  ------------>
+    <!------------ Start Footer  ------------>
+    <footer id="luxefooter"></footer>
+    <!------------ End Footer  ------------>
   </body>
 
   <!----- Bootstrap JS ----->
@@ -117,4 +116,5 @@
 
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
+  <script src="src/js/cart.js"></script>
 </html>
