--- a/productDetail.html
+++ b/productDetail.html
@@ -58,9 +58,9 @@
 
     <!------------ End Our Related Products ------------>
 
-   <!------------ Start Footer  ------------>
-   <footer id="luxefooter"></footer>
-   <!------------ End Footer  ------------>
+    <!------------ Start Footer  ------------>
+    <footer id="luxefooter"></footer>
+    <!------------ End Footer  ------------>
   </body>
 
   <!-- LightBox JS -->
@@ -88,4 +88,5 @@
   <script src="src/js/Script.js"></script>
   <script src="src/js/SingleProduct.js"></script>
   <script src="src/js/SixProduct.js"></script>
+  <script src="src/js/cart.js"></script>
 </html>
