--- a/wishlist.html
+++ b/wishlist.html
@@ -115,6 +115,7 @@
 
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
+  <script src="src/js/cart.js"></script>
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
