--- a/brands.html
+++ b/brands.html
@@ -75,4 +75,5 @@
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
   <script src="src/js/Brands.js"></script>
+  <script src="src/js/cart.js"></script>
 </html>
