--- a/shop.html
+++ b/shop.html
@@ -139,4 +139,5 @@
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
   <script src="src/js/Shop.js"></script>
+  <script src="src/js/cart.js"></script>
 </html>
