--- a/brands.html
+++ b/brands.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brands</title>
 
-    <!-- <link
+    <link
       rel="shortcut icon"
       href="img/Logo/logo-favicon.svg"
       type="image/x-icon"
-    /> -->
+    />
 
     <!----- Font Awesome Cdn ----->
     <link
