my first  commit

--- a/compare.html
+++ b/compare.html
@@ -121,4 +121,5 @@
   <script src="src/js/Script.js"></script>
   <script src="src/js/Compare.js"></script>
   <script src="src/js/cart.js"></script>
+  <script src="src/js/Wishlist.js"></script>
 </html>
