--- a/index.html
+++ b/index.html
@@ -795,4 +795,5 @@
   <script src="src/js/SixProduct.js"></script>
   <script src="src/js/HomeProducts.js"></script>
   <script src="src/js/cart.js"></script>
+  <script src="src/js/Wishlist.js"></script>
 </html>
