--- a/productDetail.html
+++ b/productDetail.html
@@ -69,9 +69,6 @@
   <!-- Product Data JS -->
   <script src="src/js/Product.js"></script>
 
-  <!-- Cart JS -->
-  <script src="src/js/cart.js"></script>
-
   <!----- Bootstrap JS ----->
   <script src="src/bootstrap/js/bootstrap.bundle.js"></script>
 
@@ -89,4 +86,5 @@
   <script src="src/js/SingleProduct.js"></script>
   <script src="src/js/SixProduct.js"></script>
   <script src="src/js/cart.js"></script>
+  <script src="src/js/Wishlist.js"></script>
 </html>
