--- a/about.html
+++ b/about.html
@@ -494,4 +494,5 @@
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
   <script src="src/js/cart.js"></script>
+  <script src="src/js/Wishlist.js"></script>
 </html>
