--- a/brands.html
+++ b/brands.html
@@ -76,4 +76,5 @@
   <script src="src/js/Script.js"></script>
   <script src="src/js/Brands.js"></script>
   <script src="src/js/cart.js"></script>
+  <script src="src/js/Wishlist.js"></script>
 </html>
