--- a/contact.html
+++ b/contact.html
@@ -141,4 +141,5 @@
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
   <script src="src/js/cart.js"></script>
+  <script src="src/js/Wishlist.js"></script>
 </html>
