--- a/wishlist.html
+++ b/wishlist.html
@@ -6,10 +6,10 @@
     <title>LuxeLiving</title>
 
     <link
-          rel="shortcut icon"
-          href="img/Logo/logo-favicon.svg"
-          type="image/x-icon"
-        />
+      rel="shortcut icon"
+      href="img/Logo/logo-favicon.svg"
+      type="image/x-icon"
+    />
 
     <!-- SwiperJS CSS  -->
     <link
@@ -41,11 +41,11 @@
     <div class="container-fluid">
       <div class="row px-5">
         <div class="col-md-12 py-4" style="background-color: #f1f2f2">
-          <h2 class="text-uppercase">Cart</h2>
+          <h2 class="text-uppercase">Wishlist</h2>
         </div>
       </div>
       <div class="row mx-4 pt-5">
-        <div class="col-lg-8 table-responsive mb-5">
+        <div class="col-lg-12 table-responsive mb-5">
           <table
             class="table bg-light table-bordered text-center mb-0 Main-cart"
           >
@@ -54,47 +54,11 @@
                 <th>S No</th>
                 <th>Products</th>
                 <th>Price</th>
-                <th>Quantity</th>
-                <th>Total</th>
                 <th>Remove</th>
               </tr>
             </thead>
-            <tbody class="align-middle" id="prodTable"></tbody>
+            <tbody class="align-middle" id="wishlistTable"></tbody>
           </table>
-        </div>
-        <div class="col-lg-4">
-          <div class="card border-secondary mb-5">
-            <div class="card-header border-0 summary-head">
-              <h3 class="m-0 summary-head">Cart Summary</h3>
-            </div>
-            <div class="card-body">
-              <div class="">
-                <div class="d-flex justify-content-between pt-1">
-                  <h6 class="font-p">
-                    Subtotal <small id="itemsCount"></small>
-                  </h6>
-                  <h6 class="font-p">Pkr <span id="showTotal"></span></h6>
-                </div>
-              </div>
-              <div class="d-flex justify-content-between">
-                <h6 class="font-p">Shipping</h6>
-                <h6 class="font-p">Free</h6>
-              </div>
-            </div>
-            <div class="card-footer border-secondary bg-transparent">
-              <div class="d-flex justify-content-between mt-2">
-                <h4>Total</h4>
-                <h4 class="" id="showTotal2"></h4>
-              </div>
-              <button
-                id="btnCheckout"
-                class="btn btn-block btn-dark my-3 py-2 text-white btn-hover"
-                style="font-size: 16px !important"
-              >
-                Proceed To Checkout
-              </button>
-            </div>
-          </div>
         </div>
       </div>
     </div>
@@ -107,20 +71,18 @@
   <!-- Product Data JS -->
   <script src="src/js/Product.js"></script>
 
-  <!-- Cart JS -->
-  <script src="src/js/cart.js"></script>
-
   <!-- JQuery -->
   <script src="src/js/JQuery-3.7.1.js"></script>
 
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
   <script src="src/js/cart.js"></script>
-
+  <script src="src/js/Wishlist.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", () => {
-      displayCart();
-      totalAmout();
+      console.log("DOMContentLoaded: Wishlist functions initialized.");
+      updateWishlistBadge();
+      displayWishlist();
     });
   </script>
 </html>
