--- a/cart.html
+++ b/cart.html
@@ -107,11 +107,16 @@
   <!-- Product Data JS -->
   <script src="src/js/Product.js"></script>
 
+  <!----- Bootstrap JS ----->
+  <script src="src/bootstrap/js/bootstrap.bundle.js"></script>
+
   <!-- JQuery -->
   <script src="src/js/JQuery-3.7.1.js"></script>
 
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
+  <script src="src/js/cart.js"></script>
+  <script src="src/js/wishlist.js"></script>
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
