--- a/wishlist.html
+++ b/wishlist.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LuxeLiving</title>
+    <title>Wishlist</title>
 
     <link
       rel="shortcut icon"
@@ -70,6 +70,9 @@
 
   <!-- Product Data JS -->
   <script src="src/js/Product.js"></script>
+
+  <!----- Bootstrap JS ----->
+  <script src="src/bootstrap/js/bootstrap.bundle.js"></script>
 
   <!-- JQuery -->
   <script src="src/js/JQuery-3.7.1.js"></script>
