--- a/signup.html
+++ b/signup.html
@@ -89,7 +89,8 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 align-content-center">
+
+          <div class="col-md-6 align-content-center order-1 order-md-2">
             <img
               src="img/banners/account-pg.jpg"
               class="img-fluid"
