--- a/contact.html
+++ b/contact.html
@@ -140,6 +140,8 @@
 
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   <script src="src/js/cart.js"></script>
   <script src="src/js/Wishlist.js"></script>
 </html>
