--- a/login.html
+++ b/login.html
@@ -47,8 +47,8 @@
             class="col-md-6 p-md-5 justify-content-center align-items-center acc-form-main-cont pt-5 pt-md-0"
           >
             <div class="align-items-center">
-              <h1>luxeliving</h1>
-              <form action="#" class="acc-form">
+              <h1>luxeliving</h1> 
+              <form class="acc-form" onsubmit="handleAuth();">>
                 <div class="input-group d-flex flex-column">
                   <label for="email">Email</label>
                   <input
@@ -116,6 +116,8 @@
 
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   <script src="src/js/cart.js"></script>
   <script src="src/js/Wishlist.js"></script>
 </html>
