--- a/brands.html
+++ b/brands.html
@@ -74,6 +74,8 @@
 
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   <script src="src/js/Brands.js"></script>
   <script src="src/js/cart.js"></script>
   <script src="src/js/Wishlist.js"></script>
