--- a/cart.html
+++ b/cart.html
@@ -115,9 +115,10 @@
 
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   <script src="src/js/cart.js"></script>
   <script src="src/js/wishlist.js"></script>
-
   <script>
     document.addEventListener("DOMContentLoaded", () => {
       displayCart();
