--- a/productDetail.html
+++ b/productDetail.html
@@ -83,6 +83,8 @@
 
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   <script src="src/js/SingleProduct.js"></script>
   <script src="src/js/SixProduct.js"></script>
   <script src="src/js/cart.js"></script>
