--- a/shop.html
+++ b/shop.html
@@ -138,6 +138,8 @@
 
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
   <script src="src/js/Shop.js"></script>
   <script src="src/js/cart.js"></script>
   <script src="src/js/Wishlist.js"></script>
