--- a/compare.html
+++ b/compare.html
@@ -119,6 +119,7 @@
 
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
+  <script src="src/js/Login_Signup.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <script src="src/js/Compare.js"></script>
