--- a/index.html
+++ b/index.html
@@ -792,6 +792,7 @@
 
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
+  <script src="src/js/Login_Signup.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="src/js/SixProduct.js"></script>
   <script src="src/js/HomeProducts.js"></script>
