--- a/shop.html
+++ b/shop.html
@@ -138,6 +138,7 @@
 
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
+  <script src="src/js/Login_Signup.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <script src="src/js/Shop.js"></script>
