--- a/wishlist.html
+++ b/wishlist.html
@@ -79,6 +79,7 @@
 
   <!----- Custom JS ----->
   <script src="src/js/Script.js"></script>
+  <script src="src/js/Login_Signup.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <script src="src/js/cart.js"></script>
