--- a/index.html
+++ b/index.html
@@ -528,13 +528,13 @@
                   class=""
                   action=""
                   id="myform"
-                  onsubmit="return formsubmition()"
+                  onsubmit="return formSubmissionHome()"
                 >
                   <label for="name" class="form-label">Enter your Name</label>
                   <input
                     type="text"
                     class="form-control mb-2"
-                    id="name"
+                    id="home-name"
                     pattern="[A-Z a-z]{3,}"
                     title="Please Enter a Valid Name."
                     required
@@ -544,14 +544,14 @@
                   <input
                     type="text"
                     class="form-control mb-2"
-                    id="subject"
+                    id="home-subject"
                     required
                   />
 
                   <label for="email" class="form-label">Email ID</label>
                   <input
                     class="form-control mb-2"
-                    id="email"
+                    id="home-email"
                     type="email"
                     pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
                     title="Please Enter a Valid Email Address."
@@ -564,7 +564,7 @@
                   <textarea
                     type="text"
                     class="form-control form-control-message mb-2"
-                    id="message"
+                    id="home-message"
                     rows="3"
                     required
                   ></textarea>
